--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,13 @@ readme = "README.md"
 python = "^3.10"
 langchain = "^0.1.6"
 openai = "^1.12.0"
-tiktoken = "^0.6.0"
 chromadb = "^0.4.22"
 python-dotenv = "^1.0.1"
+python-box = "^7.1.1"
+pyyaml = "^6.0.1"
+streamlit = "^1.31.0"
+langchain-community = "^0.0.19"
+langchain-openai = "^0.0.5"
 
 
 [tool.poetry.group.dev.dependencies]
